# Nataha-Telegram-Bot

./: .env.example  .gitignore  Cargo.toml  README.md  bot-json.php  composer.json  discord.js  docker-compose.74.dev.yaml  docker-compose.74.prod.yaml  docker-compose.74.yaml  docker-compose.84.dev.yaml  docker-compose.84.yaml  ep.php  hash_prototypes.json  markov.php  nginx-deployment.yaml  nginx-service.yaml  nginx.prod.dockerfile  node-deployment.yaml  node-service.yaml  node.dockerfile  node.prod.dockerfile  package.json  php-telegram-deployment.yaml  php-telegram-service.yaml  php-twitch-deployment.yaml  php74.dockerfile  php74.prod.dockerfile  readme.MD  testData.php  twitch_ep.php
Bots/: AbstractBaseBot.php  BaseBot.php  IBot.php  IRCBot.php  SocketBot.php  TelegramBot.php  TelegramMarkovBot.php  TelegramNeVsratoslavBot.php  TelegramSecurityExpertBot.php  TwitchSecurityExpertBot.php
Commands/: CommandListener.php  HashIdCommand.php  ICommand.php  StockCommand.php
Misc/: Application.php  Logger.php  MarkovChains.php  MemeTextFromPDO.php  NeVsratoslav.php  SecurityExpert.php
ResourceParsers/: AbstractResourceParser.php  IResourceParser.php  StockParser.php
configs/: nginx-front-example.conf  nginx.conf  nginx.frontend.example.conf  nginx.prod.dockerfile  node.dockerfile  node.prod.dockerfile  php74.dockerfile  php74.prod.dockerfile  php84.dockerfile  vars.example.env  xdebug.ini
js/: Dockerfile  discord.js  package-lock.json  package.json
markov-php/: Markov.class.php
php/: MarkovConnector.PHP  composer.json  config.example.php  config.php  ep.php  (+5 more)
(+55 files in other folders)
