[package]
name = "sosurity"
version = "0.1.0"
authors = ["Zhuza <fuck_you@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = {version = "0.8.4", features=["std_rng"] }
tokio = { version = "1.15.0", features = ["full"] }
evmap = "10.0.2"
evmap-derive = "0.2.0"
[profile.release]
debug = true