[package]
name = "sosurity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21.5"
serde_json = "1.0"
parking_lot = "0.12.1"
tokio = {version = "1", features = ["full"]}
rand = "0.8.5"
